--- a/Machine_clean_up.ipynb
+++ b/Machine_clean_up.ipynb
@@ -1853,22 +1853,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "130419"
+       "county        130419\n",
+       "Year          130419\n",
+       "Population    130419\n",
+       "well_id       130419\n",
+       "results       130419\n",
+       "chemical      130419\n",
+       "date          130419\n",
+       "units         130419\n",
+       "qualifer      130419\n",
+       "rl            130419\n",
+       "latitude      130419\n",
+       "longitude     130419\n",
+       "well_type     130419\n",
+       "source        130419\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(scrubbed_df)"
+    "scrubbed_df.count()"
    ]
   },
   {
